# sqlfingerprint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/sqlfingerprint/: __init__.py  core.py  exceptions.py
tests/: test_core.py
