[project]
name = "sqlfingerprint"
version = "0.1.0"
description = "Generate unique fingerprints for SQL queries"
readme = "README.md"
authors = [
    { name = "yinhaox", email = "yinhao0226@gmail.com" }
]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "sqlparse>=0.5.3",
]

[project.urls]
Homepage = "https://github.com/yinhaox/sqlfingerprint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
